Change background img code back to original as not responsive when it shows the full image on the screen. Comment left to target a fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,7 @@
 .backdrop {
     background-image: url('/assets/images/rain.JPG');
     background-size: cover;
+    object-fit: cover;
     max-height: 100vh;
     position: fixed;
     top: 0%;
@@ -126,8 +127,12 @@
 
 .backdrop img {
     background-size: cover;
-    max-height: 100%;
-    max-width: 100vw;
+    object-fit: cover;
+    max-height: 100%;    /* Need to fix image positioning to cover page without only showing a part of the image */
+    position:fixed;
+    top: 0%;
+    left: 0%;
+    right: 0%;
 }
 
 
